k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: dev
    labels:
      environment: development  # label untuk identifikasi
