k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  namespace: dev
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
